junk/source/utility/make.log
icc -c -O -DX11_exists -I/usr/X11R6/include -Dlinux -DFORT -DUNIX -I/usr/include/bsd utility.c
utility.c(41): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccalloc) (nbytes,location)
  ^

utility.c(49): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccfree) (nbytes,location)
  ^

utility.c(54): warning #167: argument of type "int" is incompatible with parameter of type "void *"
    ii=free(*location);
            ^

utility.c(54): error: a value of type "void" cannot be assigned to an entity of type "int"
    ii=free(*location);
      ^

utility.c(61): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccvstradd) (new,old,nold)
  ^

utility.c(67): warning #266: function declared implicitly
    len = ATUS(numchar) (old,nold);
          ^

utility.c(71): warning #167: argument of type "int" is incompatible with parameter of type "void *"
      free(*new);
           ^

utility.c(75): warning #266: function declared implicitly
    ATUS(vstrcpy) (*new,old,*(new+1),nold);
    ^

utility.c(78): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(cccheadset) (card,val,loc,ncard,nval)
  ^

utility.c(82): warning #266: function declared implicitly
    hextend(loc);
    ^

utility.c(83): warning #266: function declared implicitly
    ATUS(cheadset) (card,val,*loc,ncard,nval,*(loc+1));
    ^

utility.c(86): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccfheadset) (card,val,loc,ncard)
  ^

utility.c(90): warning #266: function declared implicitly
    hextend(loc);
    ^

utility.c(91): warning #266: function declared implicitly
    ATUS(fheadset) (card,val,*loc,ncard,*(loc+1));
    ^

utility.c(94): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccinheadset) (card,val,loc,ncard)
  ^

utility.c(98): warning #266: function declared implicitly
    hextend(loc);
    ^

utility.c(99): warning #266: function declared implicitly
    ATUS(inheadset) (card,val,*loc,ncard,*(loc+1));
    ^

utility.c(102): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccvstrcpy) (old,loc,nchar)
  ^

utility.c(106): warning #266: function declared implicitly
    ATUS(vstrcpy) (old,*loc,nchar,*(loc+1));
    ^

utility.c(110): warning #880: omission of explicit type is nonstandard ("int" assumed)
  hextend(loc)
  ^

utility.c(125): warning #266: function declared implicitly
    len = ATUS(numchar) (*loc,*(loc+1));
          ^

utility.c(129): warning #167: argument of type "int" is incompatible with parameter of type "void *"
      strncpy(temp,*loc,*(loc+1));
                   ^

utility.c(130): warning #167: argument of type "int" is incompatible with parameter of type "void *"
      free(*loc);
           ^

utility.c(133): warning #266: function declared implicitly
      strinit(*loc,*(loc+1));
      ^

utility.c(134): warning #167: argument of type "int" is incompatible with parameter of type "void *"
      strncpy(*loc,temp,*(loc+1)-2880);
              ^

utility.c(139): warning #880: omission of explicit type is nonstandard ("int" assumed)
  strinit(string,n)
  ^

utility.c(244): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrfits)(header,location,nrow,ncol,file,bitpix,bzero,bscale,haveblank,blank,fblank,ierr,nc,nc2)
  ^

utility.c(249): warning #266: function declared implicitly
    ATUS(wrfits) (header,*location,nrow,ncol,file,bitpix,bzero,bscale,haveblank,blank,fblank,ierr,nc,nc2);
    ^

utility.c(252): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrcwfpc4)(pix4,a,nrow,ncol,ifile,bitpix,bzero,bscale,haveblank,blank,fblank,ierr)
  ^

utility.c(256): warning #266: function declared implicitly
    ATUS(wrcwfpc4)(*pix4,a,nrow,ncol,ifile,bitpix,bzero,bscale,haveblank,blank,fblank,ierr);
    ^

utility.c(259): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrcwfpc2)(pix2,a,nrow,ncol,ifile,bitpix,bzero,bscale,haveblank,blank,fblank,ierr)
  ^

utility.c(263): warning #266: function declared implicitly
    ATUS(wrcwfpc2)(*pix2,a,nrow,ncol,ifile,bitpix,bzero,bscale,haveblank,blank,fblank,ierr);
    ^

utility.c(266): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrwfpc)(header,location,nrow,ncol,file,bitpix,bzero,bscale,haveblank,blank,fblank,ierr,comprsn,nc,nc2)
  ^

utility.c(271): warning #266: function declared implicitly
    ATUS(wrwfpc) (header,*location,nrow,ncol,file,bitpix,bzero,bscale,haveblank,blank,fblank,ierr,comprsn,nc,nc2);
    ^

utility.c(274): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrvist)(header,location,nrow,ncol,file,bitpix,bzero,bscale,ierr,nc,nc2)
  ^

utility.c(278): warning #266: function declared implicitly
    ATUS(wrvist) (header,*location,nrow,ncol,file,bitpix,bzero,bscale,ierr,nc,nc2);
    ^

utility.c(299): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccrdfits)(location,nrow,ncol,ifile,header,ierr,nc)
  ^

utility.c(303): warning #266: function declared implicitly
    ATUS(rdfits)(*location,nrow,ncol,ifile,header,ierr,nc);
    ^

utility.c(306): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccrdvist)(location,nrow,ncol,ifile,header,ierr,nc)
  ^

utility.c(310): warning #266: function declared implicitly
    ATUS(rdvist)(*location,nrow,ncol,ifile,header,ierr,nc);
    ^

utility.c(313): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccrddat)(location,nrow,ncol,tfile,header,nskip,ierr,nc,nc2)
  ^

utility.c(317): warning #266: function declared implicitly
    ATUS(rddat)(*location,nrow,ncol,tfile,header,nskip,ierr,nc,nc2);
    ^

utility.c(322): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccrdwfpc)(location,nrow,ncol,ifile,header,ierr,swap,nc)
  ^

utility.c(326): warning #266: function declared implicitly
    ATUS(rdwfpc)(*location,nrow,ncol,ifile,header,ierr,swap,nc);
    ^

utility.c(348): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccrddaopsf)(location,nrow,ncol,ifile,header,ierr,nc)
  ^

utility.c(352): warning #266: function declared implicitly
    ATUS(rddaopsf)(*location,nrow,ncol,ifile,header,ierr,nc);
    ^

utility.c(364): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(cccompressfileshort)(ifile,npix,a)
  ^

utility.c(367): warning #266: function declared implicitly
    ATUS(compressfileshort)(*ifile,*npix,a);
    ^

utility.c(370): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(cccomfileintunshortbase)(ifile,npix,a)
  ^

utility.c(373): warning #266: function declared implicitly
    ATUS(compressfileintunshortbase)(*ifile,*npix,a);
    ^

utility.c(376): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccexpandfileshort)(ifile,npix,a)
  ^

utility.c(379): warning #266: function declared implicitly
    ATUS(expandfileshort)(*ifile,*npix,a);
    ^

utility.c(382): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccexpandfileintunshortbase)(ifile,npix,a)
  ^

utility.c(385): warning #266: function declared implicitly
    ATUS(expandfileintunshortbase)(*ifile,*npix,a);
    ^

utility.c(389): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccinhead) (inchar,loc,card,nchar)
  ^

utility.c(398): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccchead) (inchar,loc,card,nchar,ncard)
  ^

utility.c(403): warning #266: function declared implicitly
    ATUS(chead) (inchar,*loc,card,nchar,*(loc+1),ncard);
    ^

utility.c(406): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccfhead) (inchar,loc,card,nchar)
  ^

utility.c(414): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccpop) (location,nsr,ner,nsc,nec,irow,icol,value)
  ^

utility.c(417): warning #266: function declared implicitly
    ATUS(pop) (*location,nsr,ner,nsc,nec,irow,icol,value);
    ^

utility.c(420): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccpush) (location,nsr,ner,nsc,nec,irow,icol,value)
  ^

utility.c(423): warning #266: function declared implicitly
    ATUS(push) (*location,nsr,ner,nsc,nec,irow,icol,value);
    ^

utility.c(426): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccgethjd) (loc,xerr)
  ^

utility.c(429): warning #266: function declared implicitly
    ATUS(gethjd) (*loc,xerr,*(loc+1));
    ^

utility.c(433): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccwrascii)(a,nrow,ncol,file,nf)
  ^

utility.c(456): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(ccmaskset) (location,iwd,ibt,iset,masked)
  ^

utility.c(459): warning #266: function declared implicitly
    ATUS(maskset) (*location,iwd,ibt,iset,masked);
    ^

utility.c(462): warning #880: omission of explicit type is nonstandard ("int" assumed)
  ATUS(cczeromask)(loc,nwords)
  ^

utility.c(465): warning #266: function declared implicitly
    ATUS(zeromask)(*loc,nwords);
    ^

compilation aborted for utility.c (code 2)
make: *** [../../lib/utility.linux.a(utility.o)] Error 2
